--- a/app/views/layouts/navigation/collapsible_elements/_signed_in_links.html.erb
+++ b/app/views/layouts/navigation/collapsible_elements/_signed_in_links.html.erb
@@ -4,10 +4,10 @@
     <span class="caret"></span>
   </a>
 
-  <ul class="dropdown-menu" role="menu">
+  <!-- <ul class="dropdown-menu" role="menu"> -->
     <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
     <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
-  </ul>
+  <!-- </ul> -->
 </li>
 
 <li class="mobile-menu">
