--- a/app/views/layouts/navigation/collapsible_elements/_signed_in_links.html.erb
+++ b/app/views/layouts/navigation/collapsible_elements/_signed_in_links.html.erb
@@ -1,4 +1,4 @@
-<li class="dropdown pc-menu">
+z<li class="dropdown pc-menu">
   <a id="user-settings" class="dropdown-toggle" data-toggle="dropdown" href="#">
     <span id="user-name"><%= current_user.name %></span>
     <span class="caret"></span>
