Render a private conversation window on the app - Add opened conversations to the session - Create a _conversation.html.erb file inside private/conversations - Define a private_conv_recipient helper method in the   private/conversations_helper.rb - Define an opposed_user method in Private::Conversation model   and add specs for it - Create _heading.html.erb and _messages_list.html.erb files   inside the private/conversations/conversation - Define a load_private_messages in private/conversations_helper.rb   and add specs for it - Create a _new_message_form.html.erb inside the   private/conversations/conversation - Create a _open.js.erbinside private/conversations - Create a  position_and_visibility.js inside the   assets/javascripts/conversations - Create a  conversation_window.scss inside the   assets/stylesheets/partials - Define an opened_conversations_windows helper method in   ApplicationController - Create a _private_conversations_windows.html.erb inside the   layouts/application

--- a/app/views/posts/show/contact_user/_success.html.erb
+++ b/app/views/posts/show/contact_user/_success.html.erb
@@ -19,7 +19,9 @@
 
 <body>
 <%= render 'layouts/navigation' %>
-<div class="contact-user"><div class="contacted-user">Message has been sent</div></div>
+<div class="contact-user"><div class="contacted-user">Message has been sent</div><%= render 'private/conversations/open.js.erb' %></div>
+<%= render 'layouts/application/private_conversations_windows' %>
+
 </body>
 <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </html>
