--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,8 @@
 
  // Partials - main css files
 
- @import "partials/*";
+@import "partials/*";
+@import "partials/conversation_window.scss";
  @import "partials/layout/*";
  @import "partials/posts/*";
 
