--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <body>
     <%= render 'layouts/navigation' %>
     <%= yield %>
+    <%= render 'layouts/application/private_conversations_windows' %>
   </body>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </html>
