--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <%= yield %>
     <%= render 'layouts/application/private_conversations_windows' %>
 
-    <% raise @private_conversations_windows.inspect %>
+    <%# raise @private_conversations_windows.inspect %>
   </body>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </html>
